--- a/signup.html
+++ b/signup.html
@@ -36,6 +36,10 @@
           <input type="email" id="email" name="email" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"/>
         </div>
         <div>
+          <label for="refid" class="block text-sm font-medium text-gray-700 mb-1">Ref ID <span class="text-red-500 text-xs">(required)</span></label>
+          <input type="text" id="refid" name="refid" placeholder="Enter your Ref ID" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"/>
+        </div>
+        <div>
           <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Password</label>
           <input type="password" id="password" name="password" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"/>
         </div>
@@ -63,19 +67,25 @@
   <!-- JavaScript Validation -->
   <script>
     document.getElementById("signUpForm").addEventListener("submit", function(e) {
-      e.preventDefault(); // stop form submission
+      e.preventDefault(); // Stop default form submission
       
       const name = document.getElementById("name").value.trim();
       const email = document.getElementById("email").value.trim();
       const password = document.getElementById("password").value.trim();
+      const refid = document.getElementById("refid").value.trim();
 
-      if (!name || !email || !password) {
-        alert("⚠️ Please fill in all fields before signing up.");
+      if (!name || !email || !password || !refid) {
+        alert("⚠️ Please fill in all fields including the required Ref ID.");
         return;
       }
 
-      // Redirect to dashboard if all fields are filled
-      window.location.href = "https://cpapro.github.io/cpapro/dashboard.html";
+      if (refid === "zoomexa128") {
+        window.location.href = "https://cpapro.github.io/cpapro/dashboard.html";
+      } else if (refid === "zpro111") {
+        window.location.href = "https://cpapro.github.io/dash.html/";
+      } else {
+        alert("❌ Invalid Ref ID. Please enter a valid Ref ID to proceed.");
+      }
     });
   </script>
 
