--- a/signin.html
+++ b/signin.html
@@ -24,12 +24,12 @@
   <!-- Sign In Section -->
   <main class="flex items-center justify-center min-h-screen bg-gray-50">
     <div class="w-full max-w-md bg-white shadow-lg rounded-lg p-8">
-      <h2 class="text-3xl font-bold text-center text-blue-600 mb-6">Sign In to CPA Pro</h2>
+      <h2 class="text-3xl font-bold text-center text-blue-600 mb-6">Enter Your Ref ID</h2>
       
       <form id="signInForm" class="space-y-5">
         <div>
-          <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Email Address</label>
-          <input type="email" id="email" name="email" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"/>
+          <label for="refid" class="block text-sm font-medium text-gray-700 mb-1">Ref ID</label>
+          <input type="text" id="refid" name="refid" placeholder="Enter your Ref ID" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"/>
         </div>
         <div>
           <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Password</label>
@@ -61,16 +61,21 @@
     document.getElementById("signInForm").addEventListener("submit", function(e) {
       e.preventDefault();
 
-      const email = document.getElementById("email").value.trim();
+      const refid = document.getElementById("refid").value.trim();
       const password = document.getElementById("password").value.trim();
 
-      if (email === "" || password === "") {
-        alert("Please fill in both email and password.");
+      if (refid === "" || password === "") {
+        alert("Please enter both Ref ID and password.");
         return;
       }
 
-      // All fields are filled - redirect
-      window.location.href = "https://cpapro.github.io/cpapro/dashboard.html";
+      if (refid === "zoomexa128") {
+        window.location.href = "https://cpapro.github.io/cpapro/dashboard.html";
+      } else if (refid === "zpro111") {
+        window.location.href = "https://cpapro.github.io/dash.html/";
+      } else {
+        alert("❌ Invalid Ref ID. Please enter a valid Ref ID to sign in.");
+      }
     });
   </script>
 
