--- a/dash.html
+++ b/dash.html
@@ -97,18 +97,18 @@
           <!-- User Info -->
           <div class="px-4 py-2 border-b">
             <p class="text-sm text-gray-600"><strong>User ID:</strong> 3271</p>
-            <p class="text-sm text-gray-600"><strong>Ref ID:</strong> Zoomexa128</p>
+            <p class="text-sm text-gray-600"><strong>Ref ID:</strong> zpro111 </p>
           </div>
 
           <!-- Plan Selection -->
           <div class="px-4 py-3 space-y-2 border-b">
             <label class="flex items-center space-x-2">
               <input type="radio" name="plan" checked disabled class="text-blue-500" />
-              <span class="text-sm text-gray-700 font-medium">Basic Plan (Selected)</span>
+              <span class="text-sm text-gray-700 font-medium"> Professional Plan (Selected)</span>
             </label>
             <label class="flex items-center space-x-2 opacity-50 cursor-not-allowed">
               <input type="radio" name="plan" disabled />
-              <span class="text-sm text-gray-700 font-medium">Professional Plan (Locked)</span>
+              <span class="text-sm text-gray-700 font-medium"> Basic Plan (Locked)</span>
             </label>
           </div>
 
@@ -130,7 +130,7 @@
             <i class="fas fa-eye text-blue-500 text-3xl"></i>
           </div>
           <p class="text-gray-500 text-sm uppercase">Impressions</p>
-          <h3 class="text-2xl font-bold text-gray-800 mt-1">2482</h3>
+          <h3 class="text-2xl font-bold text-gray-800 mt-1">2882</h3>
         </div>
 
         <div class="bg-white p-6 rounded-xl shadow-md text-center hover:shadow-lg transition">
@@ -138,7 +138,7 @@
             <i class="fas fa-mouse-pointer text-green-500 text-3xl"></i>
           </div>
           <p class="text-gray-500 text-sm uppercase">Clicks</p>
-          <h3 class="text-2xl font-bold text-gray-800 mt-1">56</h3>
+          <h3 class="text-2xl font-bold text-gray-800 mt-1">62</h3>
         </div>
 
         <div class="bg-white p-6 rounded-xl shadow-md text-center hover:shadow-lg transition">
@@ -146,7 +146,7 @@
             <i class="fas fa-dollar-sign text-yellow-500 text-3xl"></i>
           </div>
           <p class="text-gray-500 text-sm uppercase">Earnings</p>
-          <h3 class="text-2xl font-bold text-gray-800 mt-1">$6.18</h3>
+          <h3 class="text-2xl font-bold text-gray-800 mt-1">$3.18</h3>
         </div>
 
         <div class="bg-white p-6 rounded-xl shadow-md text-center hover:shadow-lg transition">
@@ -154,7 +154,7 @@
             <i class="fas fa-coins text-purple-500 text-3xl"></i>
           </div>
           <p class="text-gray-500 text-sm uppercase">Total Earnings</p>
-          <h3 class="text-2xl font-bold text-gray-800 mt-1">$36.01</h3>
+          <h3 class="text-2xl font-bold text-gray-800 mt-1">$42.48</h3>
         </div>
       </div>
 
