--- a/dash3.html
+++ b/dash3.html
@@ -105,11 +105,11 @@
           <div class="px-4 py-3 space-y-2 border-b">
             <label class="flex items-center space-x-2">
               <input type="radio" name="plan" checked disabled class="text-blue-500" />
-              <span class="text-sm text-gray-700 font-medium">Basic Plan (Selected)</span>
+              <span class="text-sm text-gray-700 font-medium"> Professional Plan (Selected)</span>
             </label>
             <label class="flex items-center space-x-2 opacity-50 cursor-not-allowed">
               <input type="radio" name="plan" disabled />
-              <span class="text-sm text-gray-700 font-medium">Professional Plan (Locked)</span>
+              <span class="text-sm text-gray-700 font-medium">Basic Plan (Locked)</span>
             </label>
           </div>
 
@@ -131,7 +131,7 @@
             <i class="fas fa-eye text-blue-500 text-3xl"></i>
           </div>
           <p class="text-gray-500 text-sm uppercase">Impressions</p>
-          <h3 class="text-2xl font-bold text-gray-800 mt-1">2890</h3>
+          <h3 class="text-2xl font-bold text-gray-800 mt-1">3710</h3>
         </div>
 
         <div class="bg-white p-6 rounded-xl shadow-md text-center hover:shadow-lg transition">
@@ -139,7 +139,7 @@
             <i class="fas fa-mouse-pointer text-green-500 text-3xl"></i>
           </div>
           <p class="text-gray-500 text-sm uppercase">Clicks</p>
-          <h3 class="text-2xl font-bold text-gray-800 mt-1">106</h3>
+          <h3 class="text-2xl font-bold text-gray-800 mt-1">119</h3>
         </div>
 
         <div class="bg-white p-6 rounded-xl shadow-md text-center hover:shadow-lg transition">
@@ -147,7 +147,7 @@
             <i class="fas fa-dollar-sign text-yellow-500 text-3xl"></i>
           </div>
           <p class="text-gray-500 text-sm uppercase">Earnings</p>
-          <h3 class="text-2xl font-bold text-gray-800 mt-1">$16.40</h3>
+          <h3 class="text-2xl font-bold text-gray-800 mt-1">$8.12</h3>
         </div>
 
         <div class="bg-white p-6 rounded-xl shadow-md text-center hover:shadow-lg transition">
@@ -155,7 +155,7 @@
             <i class="fas fa-coins text-purple-500 text-3xl"></i>
           </div>
           <p class="text-gray-500 text-sm uppercase">Total Earnings</p>
-          <h3 class="text-2xl font-bold text-gray-800 mt-1">$61.90</h3>
+          <h3 class="text-2xl font-bold text-gray-800 mt-1">$70.10</h3>
         </div>
       </div>
 
